favico图标问题解决

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,12 @@
             name="viewport"
             content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no"
         />
-        <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+
         <!-- 添加meta解决移动端填充色的问题 -->
         <meta name="theme-color" content="#bba1cb" />
+
+        <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
         <title>轻记账</title>
     </head>
     <body>
